# opengl-playground

./: CMakeLists.txt
cmake/modules/: FindSOIL.cmake
include/: camera.h  packed_freelist.h  renderer.h  scene.h  shader.h  shaderset.h  simulation.h
shaders/: default.frag  default.vert  lamp.frag  lighting.frag  lighting.vert
src/: flythrough_camera.cpp  main.cpp  renderer.cpp  scene.cpp  shader.cpp  shaderset.cpp  simulation.cpp
